src/test/deca/context/valid/sansObjet/test1John.deca
{
    int a = 3;
    if (a < 5) {
        a = 12;
        print(a);
    }
    else {
        print("faux");
    }
}