src/test/deca/context/invalid/sansObjet/nonBoolIf.deca
{
    if (1) {
        print("Erreur non detectée");
    }
}